# collective.z3cform.datagridfield

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  DEVELOPMENT.md  MANIFEST.in  Makefile  README.rst  README.txt  base.cfg  bootstrap.sh  buildout-5.0.cfg  buildout-5.1.cfg  buildout.cfg  checkouts.cfg  mx.ini  package.json  pnpm-lock.yaml  pyproject.toml  setup.cfg  setup.py  sources.cfg  test-4.0.x.cfg  test-4.1.x.cfg  test-4.2.x.cfg  test-4.3.x.cfg  test-5.0.x.cfg  test-5.1.x.cfg  test-5.2.x.cfg  test-base.cfg  test_plone60.cfg  tox.ini  travis-4.0.x.cfg  travis-4.1.x.cfg  travis-4.2.x.cfg  travis-4.3.x.cfg  travis.cfg  versions.cfg  webpack.config.js
.github/workflows/: meta.yml  test-matrix.yml  test.yml
collective/z3cform/datagridfield/: __init__.py  autoform.py  blockdatagridfield.py  browser.rst  browser.txt  configure.zcml  converters.py  datagridfield.py  datagridfield_display.pt  datagridfield_input.pt  datagridfield_input_block.pt  datagridfieldobject_display.pt  datagridfieldobject_input.pt  datagridfieldobject_input_block.pt  interfaces.py  registry.py  row.py  supermodel.py  testing.py  tests.py
collective/z3cform/datagridfield/demos/: menu.py  simple.py  simple_object.py
collective/z3cform/datagridfield/demos/menu_templates/: menu.pt
collective/z3cform/datagridfield/demos/simple_object_templates/: editform7.pt
collective/z3cform/datagridfield/demos/simple_templates/: editform.pt  editform2.pt  editform5.pt  editform6.pt  editform7.pt
collective/z3cform/datagridfield/profiles/default/: cssregistry.xml  metadata.xml  registry.xml
collective/z3cform/datagridfield/static/: datagridfield.css  datagridfield.js
docs/: HISTORY.txt  INSTALL.txt  LICENSE.txt  z3c.form-groups.txt
news/: +demo_with_hints.internal.md  +js-dep.internal.rst  +pattern_fix.bugfix.md  +resource_updates.internal.md  +update_dependencies.bugfix.md  +use_pnpm.internal.rst  +widget_converters.bugfix  0.bugfix  0.internal  184.bugfix  187.bugfix  188.bugfix  193.bugfix  193.bugfix.1  198.bugfix  205.bugfix  206.bugfix  209.bugfix
resources/: datagridfield-config.js
resources/js/: datagridfield.pattern.js
resources/scss/: datagridfield.scss
src/collective/z3cform/datagridfield/: __init__.py  autoform.py  blockdatagridfield.py  browser.rst  configure-profiles.zcml  configure-upgrades.zcml  configure.zcml  converters.py  datagridfield.py  datagridfield_display.pt  datagridfield_input.pt  datagridfield_input_block.pt  datagridfieldobject_display.pt  datagridfieldobject_input.pt  datagridfieldobject_input_block.pt  deserializer.py  interfaces.py  overrides.zcml  patch.py  registry.py  row.py  setuphandlers.py  supermodel.py  testing.py  tests.py  upgrades.zcml
src/collective/z3cform/datagridfield/demo/: behavior.py  configure.zcml  content.py  dgftest.xml  editform.pt  editform_object.py  editform_simple.py  interfaces.py  menu.pt
src/collective/z3cform/datagridfield/demo/profile/: types.xml
src/collective/z3cform/datagridfield/locales/: README.rst  collective.z3cform.datagridfield.pot  update.py  update.sh
src/collective/z3cform/datagridfield/profiles/default/: browserlayer.xml  jsregistry.xml  metadata.xml  registry.xml
src/collective/z3cform/datagridfield/static/: datagridfield-bundle-compiled.css  datagridfield-bundle-compiled.css.map  datagridfield-bundle-compiled.js  datagridfield-bundle-compiled.js.map  datagridfield-bundle.js  datagridfield-remote.min.js  datagridfield-remote.min.js.map  datagridfield.css  datagridfield.css.map  datagridfield.js  datagridfield.less  datagridfield.min.css  datagridfield.min.css.map  datagridfield.min.js  datagridfield.min.js.map  init_field.js
src/collective/z3cform/datagridfield/tests/: test_demoform.py  test_robot.py
src/collective/z3cform/datagridfield/upgrades/: 2.zcml  3.zcml  4.zcml  5.zcml  6.zcml  configure.zcml
(+141 files in other folders)
