[metadata]
name = collective.z3cform.datagridfield
description = Fields with repeatable data grid (table-like) for z3.cform
long_description = file: README.rst, CHANGES.rst
keywords = Plone, Dexterity, z3c.form, table, grid, sub-fields
author = Kevin Gill
author_email = kevin@movieextras.ie
url = https://github.com/collective/collective.z3cform.datagridfield
license = GNU General Public License v2 (GPLv2)
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone
    Framework :: Plone :: 5.1
    Framework :: Plone :: 5.2
    Framework :: Plone :: Addon
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
install_requires =
    plone.app.z3cform
    plone.autoform
    Products.CMFPlone >= 5.0
    plone.api
    setuptools
    z3c.form >=2.4.3dev

namespace_packages =
    collective
    collective.z3cform

packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
test =
    plone.app.testing
dev =
    pdbpp

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 79
not_skip = __init__.py
use_parentheses = True
multi_line_output = 3

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    .coveragerc
