[metadata]
name = collective.z3cform.datagridfield
description = Fields with repeatable data grid (table-like) for z3.cform
long_description = file: README.rst, CHANGES.rst
keywords = Plone, Dexterity, z3c.form, table, grid, sub-fields
author = Kevin Gill
author_email = kevin@movieextras.ie
url = https://github.com/collective/collective.z3cform.datagridfield
license = GNU General Public License v2 (GPLv2)
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone
    Framework :: Plone :: 5.1
    Framework :: Plone :: 5.2
    Framework :: Plone :: Addon
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    plone.app.z3cform
    plone.autoform
    Products.CMFPlone >= 5.0
    plone.api
    setuptools
    z3c.form >=2.4.3dev

namespace_packages =
    collective
    collective.z3cform

packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
test =
    plone.app.testing
    plone.app.robotframework [debug]
dev =
    pdbpp

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
# black compatible isort rules:
force_alphabetical_sort = True
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses = True
lines_after_imports = 2
line_length = 89
not_skip =
    __init__.py
skip =

[flake8]
# black compatible flake8 rules:
ignore =
    W503,
    C812,
    E501
    T001
    C813
# E203, E266
exclude = bootstrap.py,docs,*.egg.,omelette
max-line-length = 89
max-complexity = 18
select = B,C,E,F,W,T4,B9

builtins = unicode,basestring
